--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -22,11 +22,11 @@ jobs:
         IFS=',' read -r -a image_array <<< "$images"
         for image in "${image_array[@]}"; do
           docker pull "${image}" --platform "linux/amd64"
-          docker save "${image}" -o "${image//\//_}-amd64.tar"
+          docker save "${image}" | gzip "${image//\//_}-amd64.tar.gz"
         done
 
     - name: Compress the TAR files
-      run: tar -czf x86-64-images.tar.gz *-amd64.tar
+      run: tar -czf x86-64-images.tar.gz *-amd64.tar.gz
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
