--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -22,7 +22,7 @@ jobs:
         IFS=',' read -r -a image_array <<< "$images"
         for image in "${image_array[@]}"; do
           docker pull "${image}" --platform "linux/amd64"
-          docker save "${image}" | gzip "${image//\//_}-amd64.tar.gz"
+          docker save "${image}" | gzip > "${image//\//_}-amd64.tar.gz"
         done
 
     - name: Compress the TAR files
